# Mini-Project-Customer-Agentic-Ai

./: architecture_flowchart.md  docker-compose.yml
AiCustomerAssitant/: Dockerfile  app.py  fastapi learnings  llm.py  pyproject.toml  requirement.txt  schemas.py
Backend/project/: Dockerfile  pom.xml
Backend/project/src/main/java/com/mini/project/: ProjectApplication.java
Backend/project/src/main/java/com/mini/project/component/: JwtComponent.java  JwtFilter.java
Backend/project/src/main/java/com/mini/project/configuration/: CorsConfiguration.java  RestConfig.java  SecurityConfig.java
Backend/project/src/main/java/com/mini/project/controller/: AnalyticsController.java  AuthController.java  ReviewController.java  UserController.java
Backend/project/src/main/java/com/mini/project/dto/: AuthResponse.java
Backend/project/src/main/java/com/mini/project/entity/: Review.java  ReviewCategory.java  ReviewKeyword.java  User.java
Backend/project/src/main/java/com/mini/project/repository/: ReviewCategoryRepository.java  ReviewKeywordRepository.java  ReviewRepository.java  UserRepository.java
Backend/project/src/main/java/com/mini/project/service/: ReviewService.java  UserService.java
Backend/project/src/main/resources/: application.yaml
Backend/project/src/test/java/com/mini/project/: ProjectApplicationTests.java
FrontEnd/: Dockerfile  package-lock.json  package.json
FrontEnd/src/: AdminChat.jsx  App.jsx  Auth.jsx  Dashboard.jsx  index.css
FrontEnd/src/components/ui/: aurora-background.jsx
